--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>home</title>
 	<link rel="stylesheet" href="main.css">
+	<link rel="shortcut icon" href="icon/1600.png" type="image/x-icon">
 </head>
 <body>
 	poi
