--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>home</title>
+	<title>っぽい</title>
 	<link rel="stylesheet" href="main.css">
+	<script src="jquery-1.11.3.min.js"></script>	
+	<script src="script.js"></script>
 	<link rel="shortcut icon" href="icon/1600.png" type="image/x-icon">
 </head>
 <body>
-	poi
+	<div id="header">
+		何をする？
+	</div>
+	<div id="bodyer">
+		<div id="title"></div>
+		<div id="content">っぽい？</div>
+	</div>
+	<div id="footer">
+		by:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br />pan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	</div>
 </body>
 </html>
