--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 		何をする？
 	</div>
 	<div id="bodyer">
-		<div id="title"></div>
-		<div id="content">っぽい？</div>
+		<div id="title">
+			<div id="t1" class="div_tit">1</div>
+			<div id="t2" class="div_tit">2</div>
+			<div id="t3" class="div_tit">3</div>
+			<div id="t4" class="div_tit">4</div>
+			
+		</div>
+		<div id="content">
+			
+		</div>
 	</div>
 	<div id="footer">
-		by:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br />pan&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		
 	</div>
 </body>
 </html>
